# pyutilz

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .yamllint  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MIGRATION_COMPLETE_REPORT.md  MIGRATION_TEST_REPORT.md  README.md  REFACTORING_SUMMARY.md  TESTING.md  benchmarking.py  browser.py  cloud.py  com.py  dashlib.py  db.py  deltalakes.py  distributed.py  filemaker.py  graphql.py  image.py  logginglib.py  matrix.py  mkdocs.yml  monitoring.py  notebook_init.py  numbalib.py  numpylib.py  openai.py  pandaslib.py  parallel.py  polarslib.py  pyproject.toml  pytest.ini  pythonlib.py  (+9 more)
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: black-filtered.yml  ci.yml  docs.yml  mypy-full.yml  mypy.yml  numba-coverage.yml  publish.yml
_benchmarks/: bench_classify_column_types.py  bench_get_columns_of_type.py  bench_morpheme_tokenize.py  bench_pandaslib.py  bench_showcase_df_columns.py
audits/2026-07-21_audit-round2/: 01-concurrency-async-safety.md  02-resource-lifecycle-leaks.md  03-numerical-data-correctness.md  04-api-design-consistency.md  05-caching-memoization.md  06-config-cross-platform.md  07-logging-observability.md  08-test-coverage-gaps.md  09-backward-compat-versioning.md  10-performance-complexity.md  INDEX.md
audits/2026-07-21_full-audit/: 01-architecture-design.md  02-security.md  03-packaging-dependencies.md  04-test-suite-quality.md  05-documentation.md  06-oss-github-practices.md  07-domain-core-dev.md  08-domain-data.md  09-domain-database.md  10-domain-web-cloud.md  11-domain-system-performance.md  12-domain-text.md  13-domain-llm.md  INDEX.md
docs/: index.md  modules.md
docs/guides/: kernel_tuning_cache.md  llm_providers.md  safe_pickle.md
pyutilz/: browser.py  com.py  distributed.py  image.py  logginglib.py  matrix.py  monitoring.py  numbalib.py  pandaslib.py  parallel.py  pythonlib.py  serialization.py  similarity.py  system.py  version.py
scheduling/: prefect.py
scripts/: auto_refactor.py  bandit_warn.py  black_filtered_apply.py  format_warn.py  mypy_full_warn.py  vulture_warn.py  vulture_whitelist.py
src/pyutilz/: __init__.py  __init__.py.old  version.py
src/pyutilz/cloud/: __init__.py  cloud.py
src/pyutilz/core/: __init__.py  filemaker.py  image.py  matrix.py  openai.py  pythonlib.py  safe_pickle.py  serialization.py
src/pyutilz/data/: __init__.py  numbalib.py  numpylib.py  pandaslib.py  polarslib.py
src/pyutilz/data/pandaslib/: __init__.py  _common.py  benchmarks.py  dtypes.py  frames.py  io_ops.py
src/pyutilz/database/: __init__.py  db.py  deltalakes.py  exceptions.py  redislib.py
src/pyutilz/dev/: __init__.py  benchmarking.py  code_audit.py  code_versioning.py  dashlib.py  logginglib.py  meta_test_utils.py  notebook_init.py
src/pyutilz/llm/: __init__.py  _retry.py  anthropic_provider.py  base.py  claude_code_provider.py  config.py  deepseek_provider.py  exceptions.py  factory.py  gemini_provider.py  openai_compat.py  openai_provider.py  openrouter_provider.py  token_counter.py  xai_provider.py
src/pyutilz/performance/: __init__.py
src/pyutilz/stats/: __init__.py  normality.py
src/pyutilz/system/: __init__.py  config.py  distributed.py  gpu_dispatch.py  hardware_monitor.py  kernel_tuner.py  kernel_tuning_cache.py  monitoring.py  parallel.py  system.py
src/pyutilz/text/: __init__.py  humanizer.py  similarity.py  strings.py  tokenizers.py
src/pyutilz/web/: __init__.py  browser.py  exceptions.py  graphql.py  web.py
src/pyutilz/web/proxy/: base.py  (+4 more)
tests/: __init__.py  benchmark_pandaslib.py  conftest.py  test_audit_providers.py  test_benchmarking.py  test_browser_extra.py  test_browser_regression.py  test_cloud.py  test_code_audit.py  test_code_versioning.py  test_cuda_home_autodetect.py  test_dashlib.py  test_data_domain_extra.py  test_database_extra2.py  test_db.py  test_db_extra.py  test_dev_fixes_regression.py  test_distributed.py  test_dtypes_regression.py  test_graphql.py  test_humanizer.py  test_image.py  test_jsonutils_regression.py  test_kernel_tuning_benchmark.py  test_llm_account_credits.py  test_llm_base.py  test_llm_config.py  test_llm_core_openai.py  test_llm_deepseek.py  test_llm_domain_extra.py  test_llm_factory.py  test_llm_live.py  test_llm_openai_compat.py  test_llm_openrouter.py  test_llm_provider_audit_fixes.py  test_llm_provider_extras.py  test_llm_providers.py  test_llm_retry.py  test_llm_supports_json_mode.py  test_llm_xai.py  (+41 more)
tests/performance/kernel_tuning/: _concurrency_worker.py  test_cache.py  test_cache_concurrency.py  test_cache_facade.py  test_code_versioning.py  test_registry.py  test_remote.py
tests/stats/: test_normality.py
tests/system/: test_gpu_dispatch.py  test_hardware_detection.py  test_kernel_tuner.py  test_kernel_tuning_cache.py  test_kernel_tuning_remote.py
tests/test_meta/: _annotation_baseline.json  _api_snapshot.json  _code_audit_baseline.json  _debt_baseline.json  _docstring_baseline.json  _lock_discipline_baseline.json  _logger_lazy_baseline.json  _naming_convention_baseline.json  _param_naming_baseline.json  _resource_handle_baseline.json  test_api_stability.py  test_cache_bounded_or_invalidatable.py  test_capture_signature.py  test_code_audit_baseline.py  test_consistent_param_naming_per_annotated_type.py  test_dead_helpers.py  test_deferred_drift.py  test_deprecation_warnings_present.py  test_dict_cache_has_eviction.py  test_encoding_consistency.py  test_exception_logging_preserves_traceback.py  test_lazy_import_safety.py  test_lock_discipline_consistency.py  test_logger_lazy_formatting.py  test_meta_meta.py  test_module_alias_integrity.py  test_naming_convention_consistency.py  test_no_bare_except.py  test_no_import_cycles.py  test_no_module_reload.py  test_no_mutable_defaults.py  test_no_reiterated_iterable_params.py  test_no_top_level_side_effects.py  test_no_unicode_in_console_output.py  test_optional_deps_isolation.py  test_provider_cache_concurrency.py  test_provider_contract.py  test_provider_registration.py  test_public_annotations.py  test_public_docstrings.py  (+10 more)
(+73 files in other folders)
