[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyutilz"
version = "1.0.0"
description = "Comprehensive Python utilities for data science, databases, and system operations"
authors = [{name = "Anatoly Alexeev"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
keywords = ["utilities", "pandas", "database", "web-scraping", "data-science", "polars", "numpy", "numba"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering",
    "Topic :: Database",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: System :: Monitoring",
]

dependencies = []  # Core has no hard requirements (fully modular design)

[project.optional-dependencies]
# Data science packages
pandas = [
    "pandas>=1.5",
    "numpy>=1.20",
    "pyarrow>=10.0"
]
polars = ["polars>=0.18"]

# Combined dataframe stack (self-referential to avoid duplication/drift).
# pandas/polars stay as individual extras too for callers who only need one.
dataframes = [
    "pyutilz[pandas,polars]",
]

# Database packages
database = [
    "sqlalchemy>=1.4",
    "psycopg2-binary>=2.9",
    "pymysql>=1.0"
]

# Web scraping packages
web = [
    "selenium>=4.0",
    "undetected-chromedriver>=3.0",
    "requests>=2.28",
    "grequests>=0.7",
    "fake-useragent>=1.0",
    "curl-cffi>=0.7",
]

# Cloud storage packages
cloud = [
    "google-cloud-storage>=2.0",
    "boto3>=1.26"
]

# NLP packages
nlp = [
    "spacy>=3.0",
    "nltk>=3.8",
    "jellyfish>=0.9",
    "tiktoken>=0.5"
]

# LLM providers
llm = [
    "anthropic>=0.40",
    "google-genai>=1.0",
    "httpx>=0.25",
    "tenacity>=8.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "tiktoken>=0.5",
]

# System utilities
system = [
    "psutil>=5.9",
    "tqdm>=4.65",
    "numba>=0.56",
    "pympler>=1.0",
    "joblib>=1.2",
    "portalocker>=2.0",
    # Hardware detection (migrated from ml_perf_test)
    "py-cpuinfo>=9.0",
    "GPUtil>=1.4",
    "xmltodict>=0.13",
    "pypiwin32>=223; platform_system=='Windows'"
]

# All optional dependencies (self-referential to avoid duplication/drift)
all = [
    "pyutilz[pandas,polars,database,web,cloud,nlp,llm,system]",
]

# Development dependencies
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-benchmark>=4.0",
    "pytest-asyncio>=0.21",
    "pytest-instafail>=0.5",
    "pytest-progress>=1.3",
    "pytest-timeout>=2.1",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "bandit>=1.7"
]

# Documentation site (MkDocs Material). Build with `mkdocs build` / serve with `mkdocs serve`.
docs = [
    "mkdocs-material>=9.5",
]

[project.urls]
Homepage = "https://github.com/fingoldo/pyutilz"
Repository = "https://github.com/fingoldo/pyutilz.git"
Issues = "https://github.com/fingoldo/pyutilz/issues"
Changelog = "https://github.com/fingoldo/pyutilz/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pyutilz*"]
exclude = ["tests*", "scripts*", "docs*"]

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers -ra --timeout=120"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "gpu: marks tests requiring GPU",
    "live: marks tests requiring live provider API keys (skipped by default; pass --run-live to execute)"
]

# Coverage configuration
[tool.coverage.run]
source = ["src/pyutilz"]
omit = [
    "tests/*",
    "*/scheduling/*",
    "*/cloud/*",
    "*/web/browser.py",
    "*/dev/dashlib.py",
    "*/dev/notebook_init.py",
    "*/text/tokenizers.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "except:",
    "if 0:",
    "if False:"
]
precision = 2
show_missing = true

# Black code formatter
[tool.black]
line-length = 160
target-version = ['py38', 'py39', 'py310', 'py311', 'py312', 'py313', 'py314']
exclude = '''
/(
    \.git
  | \.venv
  | \.pytest_cache
  | build
  | dist
  | __pycache__
)/
'''

# Ruff linter
[tool.ruff]
line-length = 160
target-version = "py38"
exclude = ["tests", "scripts", ".git", "__pycache__", "build", "dist"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
ignore = [
    "E501",  # line too long (handled by black)
    "E401",  # multiple imports on one line (legacy code style)
    "E402",  # module level import not at top of file (our style uses comment blocks)
    "E701",  # multiple statements on one line (colon) - legacy code style
    "E702",  # multiple statements on one line (semicolon) - legacy code style
    "I001",  # import block is un-sorted or un-formatted (not enforcing import sorting)
    "N802",  # function name should be lowercase (legacy code, fixing separately)
    "N803",  # argument name should be lowercase (camelCase, Hungarian notation in legacy code)
    "N806",  # variable name should be lowercase (legacy code)
    "B006",  # mutable default (fixing separately)
    "F401",  # unused imports (cleaning up separately)
    "F541",  # f-string without placeholders (sometimes used for consistency)
    "UP031", # use format specifiers instead of percent format (legacy code, not urgent)
    "UP006", # list/dict over typing.List: project targets py38 (parity with mlframe)
    "UP007", # X|Y over Union: py38 concern (parity with mlframe)
    "UP045", # X|None over Optional: py38 concern (parity with mlframe)
    "UP037", # quoted annotation: forward refs in dataclass slots (parity with mlframe)
    "F403",  # ``from x import *``: intentional in several namespace modules
    "F405",  # name may be undefined / from star-import: consequence of intentional F403, not a bug
    "B904",  # raise ... from inside except: stylistic, not a correctness issue
    "B009",  # getattr(x, "const"): stylistic
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports OK in __init__

# MyPy type checker
[tool.mypy]
# The project's minimum RUNTIME support may still be older; this is only the syntax-checking
# target mypy 2.x type-checks against, and mypy 2.x dropped support for targets below 3.10
# (raises "Python 3.8 is not supported" otherwise -- it silently fell back and kept checking,
# but the declared target should match what mypy actually enforces).
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Too strict for now, enable gradually
ignore_missing_imports = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

# Strict-mode beachhead (mirrors mlframe's approach): two small, cohesive, stable-surface
# subpackages verified clean under strict mode as of 2026-07-06.
# - dev.code_audit (11 files): a self-contained lint/audit CLI tool, already clean with no
#   changes needed.
# - stats (2 files): numba-jitted normality tests; fixed 2 real errors in the njit-fallback
#   stub (missing annotations on the *args/**kwargs decorator pattern).
# Expansion to other subpackages should follow only after each is independently verified
# clean, same policy as mlframe.
[[tool.mypy.overrides]]
module = ["pyutilz.dev.code_audit.*", "pyutilz.stats.*"]
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_return_any = true
no_implicit_optional = true
