[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyutilz"
version = "1.0.0"
description = "Modular utilities for dataframes, databases, web scraping, cloud storage, system introspection, parallelism, and a unified async LLM-provider interface (Anthropic, OpenAI, Gemini, and more) — zero hard dependencies, install only what you need"
authors = [{name = "Anatoly Alexeev"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
keywords = [
    "utilities", "pandas", "polars", "numpy", "numba", "data-science", "dataframe",
    "database", "web-scraping", "cloud-storage", "s3", "gcs",
    "llm", "anthropic", "openai", "gemini", "async",
    "gpu", "cuda", "cupy", "parallelism", "system-monitoring",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: AsyncIO",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering",
    "Topic :: Database",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: System :: Monitoring",
]

dependencies = []  # Core has no hard requirements (fully modular design)

[project.optional-dependencies]
# Data science packages
pandas = [
    "pandas>=1.5",
    "numpy>=1.20",
    "pyarrow>=10.0"
]
polars = ["polars>=0.18"]

# Combined dataframe stack (self-referential to avoid duplication/drift).
# pandas/polars stay as individual extras too for callers who only need one.
dataframes = [
    "pyutilz[pandas,polars]",
]

# Database packages
database = [
    "sqlalchemy>=1.4",
    "psycopg2-binary>=2.9",
    "pymysql>=1.0",
    # database/__init__.py imports dateutil.relativedelta unconditionally at module level;
    # redislib.py imports redis unconditionally at module level. Neither is guarded by
    # try/except (unlike e.g. orjson elsewhere), so they're real requirements of this
    # extra, not correctly-optional add-ons.
    "python-dateutil>=2.8",
    "redis>=4.0",
]

# Web scraping packages
web = [
    "selenium>=4.0",
    "undetected-chromedriver>=3.0",
    "requests>=2.28",
    "grequests>=0.7",
    "fake-useragent>=1.0",
    "curl-cffi>=0.7",
]

# Cloud storage packages
cloud = [
    "google-cloud-storage>=2.0",
    "boto3>=1.26"
]

# dev/dashlib.py imports flask/dash/dash_bootstrap_components unconditionally at module
# level (unlike flask_login a few lines down in the same file, which is try/except-guarded)
# -- a real, currently-undeclared requirement for anyone importing this niche notebook-
# dashboard helper module.
dash = [
    "flask>=2.0",
    "dash>=2.0",
    "dash-bootstrap-components>=1.0",
]

# system/scheduling/prefect.py imports prefect unconditionally at module level.
prefect = [
    "prefect>=2.0",
]

# system/parallel.py's set_tf_gpu() imports tensorflow.
tensorflow = [
    "tensorflow>=2.0",
]

# NLP packages
nlp = [
    "spacy>=3.0",
    "nltk>=3.8",
    "jellyfish>=0.9",
    "tiktoken>=0.5",
    # text/strings/webtext.py imports these three unconditionally (no try/except
    # fallback, unlike orjson elsewhere in the codebase), so they must be real
    # declared dependencies rather than relying on some other extra's transitive
    # pull -- deptry DEP003 flagged all three as used-but-undeclared.
    "beautifulsoup4>=4.0",
    "inflect>=6.0",
    "emoji-data-python>=1.6",
]

# LLM providers
llm = [
    "anthropic>=0.40",
    "google-genai>=1.0",
    "httpx>=0.25",
    "tenacity>=8.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "tiktoken>=0.5",
]

# System utilities
system = [
    "psutil>=5.9",
    "tqdm>=4.65",
    "numba>=0.56",
    "pympler>=1.0",
    "joblib>=1.2",
    "portalocker>=2.0",
    # core/image.py and core/matrix.py import Pillow/scipy unconditionally at module level;
    # neither maps to an existing domain extra, so they'd otherwise be genuinely undeclared
    # requirements for anyone importing those two core submodules directly.
    "Pillow>=9.0",
    "scipy>=1.9",
    # Hardware detection (migrated from ml_perf_test)
    "py-cpuinfo>=9.0",
    "GPUtil>=1.4",
    "xmltodict>=0.13",
]

# GPU acceleration (cupy). Every cupy import site in the codebase is already
# try/except-guarded (kernel_tuning device probing, gpu_dispatch.py) -- this extra
# exists purely for discoverability (`pip install pyutilz[gpu]`) rather than to make
# cupy required. Deliberately excluded from `all` (mirrors mlframe's [gpu] extra):
# cupy's cudaXX-specific wheel resolution doesn't belong in a default "everything" install.
gpu = [
    "cupy>=12.0",
]

# All optional dependencies (self-referential to avoid duplication/drift)
all = [
    "pyutilz[pandas,polars,database,web,cloud,nlp,llm,system]",
]

# Development dependencies
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-benchmark>=4.0",
    "pytest-asyncio>=0.21",
    "pytest-instafail>=0.5",
    "pytest-progress>=1.3",
    "pytest-timeout>=2.1",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "bandit>=1.7",
    # needed by .pre-commit-config.yaml's local hooks; py-ci-shared itself requires-python >=3.9,
    # so the marker keeps `pip install .[dev]` installable on the py3.8 CI matrix cell (dev-only
    # tooling, not a runtime dependency -- py3.8 CI coverage doesn't need pre-commit hooks to work).
    "py-ci-shared @ git+https://github.com/fingoldo/py-ci-shared.git ; python_version >= '3.9'"
]

# Documentation site (MkDocs Material). Build with `mkdocs build` / serve with `mkdocs serve`.
docs = [
    "mkdocs-material>=9.5",
]

[project.urls]
Homepage = "https://github.com/fingoldo/pyutilz"
Documentation = "https://fingoldo.github.io/pyutilz/"
Repository = "https://github.com/fingoldo/pyutilz.git"
Issues = "https://github.com/fingoldo/pyutilz/issues"
Changelog = "https://github.com/fingoldo/pyutilz/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pyutilz*"]
exclude = ["tests*", "scripts*", "docs*"]

[tool.setuptools.package-data]
pyutilz = ["py.typed"]

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers -ra --timeout=120"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "gpu: marks tests requiring GPU",
    "live: marks tests requiring live provider API keys (skipped by default; pass --run-live to execute)"
]

# Coverage configuration
[tool.coverage.run]
source = ["src/pyutilz"]
omit = [
    "tests/*",
    "*/scheduling/*",
    "*/cloud/*",
    "*/web/browser.py",
    "*/dev/dashlib.py",
    "*/dev/notebook_init.py",
    "*/text/tokenizers.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "except:",
    "if 0:",
    "if False:"
]
precision = 2
show_missing = true

# Black code formatter
[tool.black]
line-length = 160
target-version = ['py38', 'py39', 'py310', 'py311', 'py312', 'py313', 'py314']
exclude = '''
/(
    \.git
  | \.venv
  | \.pytest_cache
  | build
  | dist
  | __pycache__
)/
'''

# Ruff linter. Base select/ignore (E,W,F,I,N,UP,B,DTZ,A,T20,RUF,G,ISC,PERF,C90 + the generic
# ignores) is pulled in from ../py-ci-shared/configs/ruff-base.toml via `extend` -- a real merge,
# not copy-paste. See that file's header comment and https://github.com/fingoldo/py-ci-shared for
# the full rationale. Everything below is pyutilz-specific: its own dir excludes, target-version
# floor (py38, older than mlframe's py39), and its own MEASURED mccabe threshold (complexity
# distributions differ per codebase; never copy another repo's number -- see the comment below).
[tool.ruff]
extend = "../py-ci-shared/configs/ruff-base.toml"
target-version = "py38"
# _benchmarks added 2026-07-09 while wiring the blocking gate: its scripts print timing/identity
# results to stdout by design (that IS the benchmark's interface, same exemption class as
# py-ci-shared's own CLI scripts) -- T201/PERF401 findings there are noise, not bugs. Mirrors
# mlframe's benchmarks/_benchmarks/profiling exclusion (found via the identical gap there).
exclude = ["tests", "scripts", "_benchmarks", ".git", "__pycache__", "build", "dist"]

# Measured 2026-07-09 when C90 was newly added via the shared base (pyutilz had never selected
# it before): default threshold=10 flags 68 functions, median complexity among those 15, mean
# 18.8, max 61. threshold=20 keeps 17 findings -- the genuine outliers (complexity 20-61) --
# without flagging routine 10-20 dispatch/branching functions. Lower than mlframe's 40 because
# pyutilz's overall complexity distribution is genuinely lower; this is pyutilz's own measured
# number, not copied from mlframe.
[tool.ruff.lint.mccabe]
max-complexity = 20

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports OK in __init__
"src/pyutilz/__init__.py" = ["N807"]  # module-level __getattr__ (PEP 562) is a real dunder, not a naming violation
"src/pyutilz/llm/claude_code_provider.py" = ["N814"]  # local import aliases (_TRS, _TSS) follow the project's underscore-prefixed-short-alias convention, not a "constant" naming
"src/pyutilz/dev/notebook_init.py" = ["T201"]  # entire module's job is printing interactive Jupyter-notebook-init status messages to stdout for the user to see; already excluded from coverage as a notebook-only utility
"src/pyutilz/web/proxy/decodo.py" = ["T201"]  # all findings are in DecodoProvider.print_usage(), explicitly documented as "Print human-readable subscription + traffic summary to stdout"

# Deptry: unused / missing / transitive dependency scan. Made blocking 2026-07-09 after a real
# triage pass (run with the [all,dev] extras actually installed -- deptry's DEP001/DEP002 are
# both meaningless in a bare environment, see py-ci-shared/README). 70 raw findings reduced to 0
# by [tool.deptry.package_module_name_map] (PyPI-name vs. import-name mismatches deptry can't
# infer on its own) and the per_rule_ignores below (genuinely optional third-party libs behind
# try/except ImportError guards, verified individually -- never a hard runtime requirement).
[tool.deptry]
exclude = ["tests", "scripts", ".venv", "build", "dist"]

[tool.deptry.package_module_name_map]
"psycopg2-binary" = "psycopg2"
beautifulsoup4 = "bs4"
"google-genai" = "google"
Pillow = "PIL"
"py-cpuinfo" = "cpuinfo"
"python-dateutil" = "dateutil"
GPUtil = "GPUtil"

[tool.deptry.per_rule_ignores]
# selenium/undetected-chromedriver/boto3/google-cloud-storage: real runtime deps, but
# imported lazily inside deeply-nested functions (see cloud/cloud.py, web/browser.py,
# performance/kernel_tuning/remote.py) -- deptry's AST usage scan misses some of these.
# pytest*/black/ruff/mypy/bandit/mkdocs-material: dev-tool CLI packages, invoked as
# commands (pytest, black, ruff, mypy, bandit, mkdocs) -- never `import`-ed by name, so
# deptry's static-usage scan can never see them as "used" no matter how the code changes.
# fake-useragent: referenced only via the dynamic `ensure_installed("... fake_useragent")`
# runtime-install helper (web/web.py) and a commented-out future `from fake_useragent
# import UserAgent`, not a static `import` deptry's scanner can detect.
DEP002 = [
    "selenium",
    "undetected-chromedriver",
    "boto3",
    "google-cloud-storage",
    "pytest",
    "pytest-cov",
    "pytest-benchmark",
    "pytest-asyncio",
    "pytest-instafail",
    "pytest-progress",
    "pytest-timeout",
    "black",
    "ruff",
    "mypy",
    "bandit",
    "mkdocs-material",
    "fake-useragent",
    "py-ci-shared",  # invoked as `python -m py_ci_shared.*` CLI/pre-commit-hook commands, never `import py_ci_shared`
]

# DEP001 (import missing from declared deps): 35 findings from the 2026-07-09 full triage (run
# with [all,dev] actually installed), each individually verified to be a genuinely optional
# third-party import behind a try/except ImportError guard -- never a hard runtime requirement.
# One real bug found and fixed along the way, not ignored: core/pythonlib.py's load_file() had
# an UNGUARDED module-level `from catboost import CatBoostClassifier`, making catboost a hard
# dependency for callers loading .joblib/.pckl files too; moved to a lazy import inside the
# .bin-only branch that actually needs it (still unguarded there, since that branch always did
# require catboost -- the bug was the import's SCOPE, not the absence of a try/except).
DEP001 = [
    "catboost",  # core/pythonlib.py load_file() -- lazy-imported only for the .bin/CatBoost branch
    "IPython",  # core/pythonlib.py is_jupyter_notebook(), data/pandaslib/_common.py, dev/notebook_init.py -- notebook-only
    "nvidia",  # core/pythonlib.py -- CUDA_HOME discovery from the nvidia pip package, guarded
    "polars_ds",  # data/polarslib.py -- gated on check_cpu_flag("avx2")
    "orjson",  # database/db, llm/openai_compat.py, performance/kernel_tuning/remote.py, text/strings/jsonutils.py, web/* -- faster-than-stdlib json, falls back if missing
    "filelock",  # database/deltalakes.py -- guarded, FileLock/Timeout set to None on ImportError
    "flask_login",  # dev/dashlib.py -- guarded, Dash-only feature
    "concurrent_log_handler",  # dev/logginglib.py -- guarded, falls back to stdlib RotatingFileHandler
    "matplotlib",  # dev/notebook_init.py -- guarded, notebook-only
    "seaborn",  # dev/notebook_init.py -- guarded, notebook-only
    "claude_code_sdk",  # llm/claude_code_provider.py -- guarded SDK monkey-patch block
    "anyio",  # llm/claude_code_provider.py -- inside the same guarded claude_code_sdk block
    "botocore",  # performance/kernel_tuning/remote.py -- guarded, S3 remote-cache is opt-in
    "wmi",  # system/system/probing.py -- guarded, Windows-only
]

# DEP003 (import used but declared as transitive, not direct): same soft-import names as DEP001
# above, minus flask_login/concurrent_log_handler/claude_code_sdk/wmi (which stayed genuinely
# absent in this environment). Whether deptry reports DEP001 or DEP003 for a given name depends
# on whether something else's dependency resolution happens to pull it in transitively -- not
# something this repo controls or wants to depend on staying stable, so both codes are ignored
# for the same verified-optional names rather than re-triaging every time a transitive pin shifts.
DEP003 = [
    "catboost", "IPython", "nvidia", "polars_ds", "orjson", "filelock", "matplotlib", "seaborn", "anyio", "botocore",
]

# Interrogate: docstring coverage. Blocking at --fail-under=100 since 2026-07-09 (see the CI
# lint-blocking job and the .pre-commit-config.yaml interrogate-blocking hook) -- pyutilz was
# already at 100% coverage (917/917) before this config was wired up to gate on it. `_benchmarks`
# needs no explicit exclude here (unlike mlframe's) since it lives at the repo root, outside the
# `src/pyutilz` path this scan is scoped to.
[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-private = true
exclude = ["tests", "scripts", "docs", "build", "dist"]
verbose = 1

# Codespell. Moved from the CI/pre-commit CLI --ignore-words-list flag into structured config
# (mirrors mlframe) so the ignore list lives in one place instead of being duplicated across
# .pre-commit-config.yaml and ci.yml. "coo" = coordinate sparse-matrix format (core/matrix.py),
# the sole confirmed false positive as of the 2026-07-05 codespell setup.
[tool.codespell]
ignore-words-list = "coo"

# MyPy type checker
[tool.mypy]
# The project's minimum RUNTIME support may still be older; this is only the syntax-checking
# target mypy 2.x type-checks against, and mypy 2.x dropped support for targets below 3.10
# (raises "Python 3.8 is not supported" otherwise -- it silently fell back and kept checking,
# but the declared target should match what mypy actually enforces).
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Too strict for now, enable gradually
ignore_missing_imports = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

# Strict-mode beachhead (mirrors mlframe's approach): two small, cohesive, stable-surface
# subpackages verified clean under strict mode as of 2026-07-06.
# - dev.code_audit (11 files): a self-contained lint/audit CLI tool, already clean with no
#   changes needed.
# - stats (2 files): numba-jitted normality tests; fixed 2 real errors in the njit-fallback
#   stub (missing annotations on the *args/**kwargs decorator pattern).
# Expansion to other subpackages should follow only after each is independently verified
# clean, same policy as mlframe.
[[tool.mypy.overrides]]
module = ["pyutilz.dev.code_audit.*", "pyutilz.stats.*"]
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_return_any = true
no_implicit_optional = true
